--- a/install.yml
+++ b/install.yml
@@ -18,4 +18,16 @@
   become: yes
   roles:
     - { role: addon, tags: addon }
+
+- hosts: cluster
+  become: yes
+  gather_facts: yes
+  roles:
+    - { role: glusterfs, tags: glusterfs}
+
+- hosts: masters[0]
+  gather_facts: no
+  become: yes
+  roles:
     - { role: ecp, tags: ecp }
+
