--- a/roles/common/defaults/main.yml
+++ b/roles/common/defaults/main.yml
@@ -8,3 +8,4 @@ kubeadmin_config: /etc/kubernetes/admin.conf
 kube_addon_dir: /etc/kubernetes/addon
 kube_ecp_dir: /etc/kubernetes/ecp
 kubeadm_config: /etc/kubernetes/kubeadm.yaml
+kube_glusterfs_dir: /etc/kubernetes/glusterfs
