--- a/roles/common/vars/main.yml
+++ b/roles/common/vars/main.yml
@@ -3,3 +3,4 @@ master_hosts: "{{ groups.masters | default([]) }}"
 node_hosts: "{{ groups.nodes | default([]) }}"
 cluster_hosts: "{{ groups.cluster | default([]) }}"
 new_node_hosts: "{{ groups.new_nodes | default([]) }}"
+glusterfs_hosts: "{{ groups.glusterfs_nodes | default([]) }}"
