--- a/destroy.yml
+++ b/destroy.yml
@@ -43,6 +43,20 @@
         - /usr/db_data
         - /var/run/calico
         - /etc/systemd/system/kubelet.service.d/
+        - /etc/glusterfs 
+        - /var/lib/glusterd
+        - /var/lib/heketi
+      ignore_errors: True
+
+    - name: Get GlusterFS volumes
+      shell: "pvs | grep vg_"
+      register: vgs_result
+      ignore_errors: True
+
+    - name: Remove pvs and vgs
+      shell: "vgremove -f {{ item.strip().split()[1] }} && pvremove -f {{ item.strip().split()[0] }}"
+      with_items:
+        - "{{ vgs_result.stdout_lines }}"
       ignore_errors: True
 
     - name: Flush IP tables
