--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -16,7 +16,7 @@ apt_kubeadm_version: 1.7.5-00
 apt_glusterfs_repo: "ppa:gluster/glusterfs-3.8"
 ###########################################################################
 # Configuration for kubeadm
-kubeadm_image_repository: rivernet
+kubeadm_image_repository: docker.io/rivernet
 kube_version: v1.7.5
 token: b0f7b8.8d1767876297d85c
 ############################################################################
