--- a/roles/cni/tasks/main.yml
+++ b/roles/cni/tasks/main.yml
@@ -25,7 +25,7 @@
 - name: "Create {{ cni.name }} cluster role"
   when: check_role.rc != 0
   shell: |
-    kubectl create --kubeconfig={{ kubeadmin_config }} \
+    kubectl apply --kubeconfig={{ kubeadmin_config }} \
                    -f {{ network_dir }}/{{ cni.template.rbac }}
   delegate_to: "{{ master_hosts[0] }}"
   run_once: true
@@ -43,7 +43,7 @@
 - name: "Create {{ cni.name }} network daemonset"
   when: check_net.rc != 0
   shell: |
-    kubectl create --kubeconfig={{ kubeadmin_config }} \
+    kubectl apply --kubeconfig={{ kubeadmin_config }} \
                    -f {{ network_dir }}/{{ cni.template.ds }}
   delegate_to: "{{ master_hosts[0] }}"
   run_once: true
