--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -39,8 +39,11 @@ registry_domain: docker.io
 ecp_namespace: sky-firmament
 # appstore
 rudder_image: rivernet/rudder:20170626
+helm_image: rivernet/helm:v2.2.3
 tiller_image: rivernet/tiller:v2.2.3
 ecp_charts_url: https://github.com/rivernetio/charts/raw/master/repo/stable
+# Do NOT add the final slash to 'local'
+ecp_local_charts: /home/vagrant/charts/repo/local
 # logging
 canes_image: rivernet/canes:20170626
 elasticsearch_image: rivernet/elasticsearch:1.5.2
@@ -93,4 +96,3 @@ pod_run_retry: 300
 # Pod starting retry delay
 pod_run_retry_delay: 5
 
-opensource: true
