--- a/roles/ecp/tasks/label.yml
+++ b/roles/ecp/tasks/label.yml
@@ -1,10 +1,27 @@
----
+---  
 - name: Label cluster with one node
   when: cluster_hosts | length == 1
   shell: "{{ item }}"
   with_items:
     - kubectl label --overwrite=true nodes {{ ansible_hostname }} appstore=yes
     - kubectl label --overwrite=true nodes {{ ansible_hostname }} prometheus=yes
+    
+- name: Get master nodes of multi-nodes cluster
+  when: master_hosts | length  >= 1
+  shell: |
+    kubectl get nodes -l kubeadm.alpha.kubernetes.io/role=master \
+        -o jsonpath='{.items[*].status.addresses[?(@.type=="Hostname")].address}'
+  register: master_nodes_result
+  until: master_nodes_result.stdout != ""
+  retries: 20
+  delay: 15
+  
+- set_fact: master_nodes={{ master_nodes_result.stdout.split(" ") }}
+  
+- name: Label harbor on the first master node
+  shell: "{{ item }}"
+  with_items:
+    - kubectl label --overwrite=true nodes {{ master_nodes[0] }} habor=yes
 
 - name: Get worker nodes of multi-nodes cluster
   when: cluster_hosts | length  > 1
@@ -31,4 +48,3 @@
   with_items:
     - kubectl label --overwrite=true nodes {{ worker_nodes[0] }} appstore=yes
     - kubectl label --overwrite=true nodes {{ worker_nodes[1] }} prometheus=yes
-    
