--- a/roles/ecp/tasks/main.yml
+++ b/roles/ecp/tasks/main.yml
@@ -38,24 +38,21 @@
   tags:
     - ecp_appstore
 
-# Needs to verify
-#- name: Create logging service
-#  when: 
-#    - ecp is defined
-#    - ecp | bool
-#  import_tasks: logging.yml
-#  tags:
-#    - ecp_logging
+- name: Create logging service
+  when: 
+    - ecp is defined
+    - ecp | bool
+  import_tasks: logging.yml
+  tags:
+    - ecp_logging
 
-# Event image needs to update k8s Java client
-# Existing one is outdated causing client exception
-#- name: Create events service
-#  when:
-#    - ecp is defined
-#    - ecp | bool
-#  import_tasks: events.yml
-#  tags:
-#    - ecp_events
+- name: Create events service
+  when:
+    - ecp is defined
+    - ecp | bool
+  import_tasks: events.yml
+  tags:
+    - ecp_events
 
 - name: Create prometheus services
   import_tasks: prometheus.yml
