--- a/roles/common/defaults/main.yml
+++ b/roles/common/defaults/main.yml
@@ -9,3 +9,4 @@ kube_addon_dir: /etc/kubernetes/addon
 kube_ecp_dir: /etc/kubernetes/ecp
 kubeadm_config: /etc/kubernetes/kubeadm.yaml
 kube_glusterfs_dir: /etc/kubernetes/glusterfs
+kube_harbor_dir: /etc/kubernetes/harbor
