--- a/roles/kubernetes/tasks/main.yml
+++ b/roles/kubernetes/tasks/main.yml
@@ -76,14 +76,23 @@
     sysctl net.bridge.bridge-nf-call-iptables=1
     sysctl net.bridge.bridge-nf-call-ip6tables=1
 
-- name: Override config file directory for Debian
+- name: Set facts for Debian
   when: ansible_os_family == "Debian"
   set_fact:
-    dropin_dir: "/etc/systemd/system"
+    cgroup_driver: cgroupfs
+
+- name: Set facts for RedHat
+  when: ansible_os_family == "RedHat"
+  set_fact:
+    cgroup_driver: systemd
 
 - name: Copy kubeadm conf to drop-in directory
-  when: ansible_os_family == "Debian"
   template: src=10-kubeadm.conf.j2 dest={{ dropin_dir }}/kubelet.service.d/10-kubeadm.conf
+  when: kube_version | version_compare('1.8', '<')
+
+- name: Copy kubeadm conf to drop-in directory (1.8 and later)
+  template: src=10-kubeadm-post-1.8.conf.j2 dest={{ dropin_dir }}/kubelet.service.d/10-kubeadm.conf
+  when: kube_version | version_compare('1.8', '>=')
 
 - name: Enable and start kubelet engine
   systemd:
