--- a/roles/ecp/tasks/main.yml
+++ b/roles/ecp/tasks/main.yml
@@ -68,6 +68,11 @@
   import_tasks: sas.yml
   tags:
     - ecp_sas
+    
+- name: Create ara service
+  import_tasks: ara.yml
+  tags:
+    - ecp_ara
 
 - name: Create pyxis service
   import_tasks: pyxis.yml
