--- a/roles/kubernetes/tasks/main.yml
+++ b/roles/kubernetes/tasks/main.yml
@@ -88,11 +88,11 @@
 
 - name: Copy kubeadm conf to drop-in directory
   template: src=10-kubeadm.conf.j2 dest={{ dropin_dir }}/kubelet.service.d/10-kubeadm.conf
-  when: kube_version | version_compare('1.8', '<')
+  when: kube_num_version | version_compare('1.8', '<')
 
 - name: Copy kubeadm conf to drop-in directory (1.8 and later)
   template: src=10-kubeadm-post-1.8.conf.j2 dest={{ dropin_dir }}/kubelet.service.d/10-kubeadm.conf
-  when: kube_version | version_compare('1.8', '>=')
+  when: kube_num_version | version_compare('1.8', '>=')
 
 - name: Enable and start kubelet engine
   systemd:
