--- a/roles/harbor/tasks/main.yml
+++ b/roles/harbor/tasks/main.yml
@@ -17,4 +17,12 @@
   run_once: true
   delegate_to: "{{ master_hosts[0] }}"
 
+- name: Push app images
+  import_tasks: push.yml
+  run_once: true
+  delegate_to: "{{ master_hosts[0] }}"
+  tags:
+    - push
+
+
 
