Support offline install

--- a/install.yml
+++ b/install.yml
@@ -1,5 +1,11 @@
 ---
 
+#- hosts: cluster
+#  gather_facts: no
+#  become: yes
+#  roles:
+#    - { role: load, tags: load }
+
 - hosts: masters[0]
   gather_facts: yes
   become: yes
