--- a/roles/destroy/tasks/main.yml
+++ b/roles/destroy/tasks/main.yml
@@ -73,6 +73,20 @@
     - "{{ vgs_result.stdout_lines }}"
   ignore_errors: True
 
+- name: Remove glusterfs client
+  when: ansible_os_family == "RedHat"
+  yum: name={{item}} state=removed
+  with_items:
+    - glusterfs-client
+  ignore_errors: True
+
+- name: Remove glusterfs client
+  when: ansible_os_family == "Debian"
+  apt: name={{item}} state=removed
+  with_items:
+    - glusterfs-client
+  ignore_errors: True
+
 - name: Flush IP tables
   iptables:
     table: nat
