--- a/roles/glusterfs/tasks/main.yml
+++ b/roles/glusterfs/tasks/main.yml
@@ -1,28 +1,13 @@
 ---
-- name: Add GlusterFS APT repository
-  when: ansible_os_family == "Debian"
-  apt_repository:
-    repo: "{{ apt_glusterfs_repo }}"
-    state: present
+- name: Install binaries online
+  import_tasks: online.yml
+  when: offline is not defined or not offline | bool
 
-- name: Install glusterfs client
-  when: ansible_os_family == "RedHat"
-  yum:
-    name: "{{ item }}"
-    update_cache: yes
-    state: present
-  with_items:
-    - glusterfs-client
-
-- name: Install glusterfs client
-  when: ansible_os_family == "Debian"
-  apt:
-    name: "{{ item }}"
-    update_cache: yes
-    state: present
-  with_items:
-    - software-properties-common
-    - glusterfs-client
+- name: Install binaries offline
+  import_tasks: offline.yml
+  when:
+    - offline is defined
+    - offline | bool
 
 - name: Prepare for deployment
   import_tasks: prepare.yml
