--- a/roles/kubernetes/tasks/offline.yml
+++ b/roles/kubernetes/tasks/offline.yml
@@ -2,9 +2,10 @@
   file: path={{ ecp_rpm_dir }} state=directory
 
 - name: Copy rpm files to all hosts
-  copy:
+  synchronize:
     src: "{{ ecp_rpms }}"
     dest: "{{ ecp_rpm_dir }}"
+    checksum: yes
 
 - name: Install offline package
   when: 
