--- a/roles/destroy/tasks/main.yml
+++ b/roles/destroy/tasks/main.yml
@@ -3,6 +3,8 @@
   shell: |
     {{ kube_glusterfs_dir }}/gk-deploy -gy abort {{ kube_glusterfs_dir }}/topology.json
   delegate_to: "{{ master_hosts[0] }}"
+  async: 60
+  poll: 5
   ignore_errors: True
 
 - name: Reset kubeadm
