--- a/roles/ecp/tasks/label.yml
+++ b/roles/ecp/tasks/label.yml
@@ -6,6 +6,10 @@
     - kubectl label --overwrite=true nodes {{ ansible_hostname }} appstore=yes
     - kubectl label --overwrite=true nodes {{ ansible_hostname }} prometheus=yes
 
+- set_fact:
+    worker_nodes="[]"
+  when: cluster_hosts | length == 1
+
 - name: Get worker nodes of multi-nodes cluster
   when: cluster_hosts | length  > 1
   shell: |
@@ -16,7 +20,9 @@
   retries: 20
   delay: 15
 
-- set_fact: worker_nodes={{ worker_nodes_result.stdout.split(" ") }}
+- set_fact:
+    worker_nodes={{ worker_nodes_result.stdout.split(" ") }}
+  when: cluster_hosts | length  > 1
 
 - name: Label cluster with one worker node
   when: worker_nodes | length == 1
@@ -31,3 +37,4 @@
   with_items:
     - kubectl label --overwrite=true nodes {{ worker_nodes[0] }} appstore=yes
     - kubectl label --overwrite=true nodes {{ worker_nodes[1] }} prometheus=yes
+
