--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -39,6 +39,10 @@ calico_cni_image: rivernet/cni:v1.10.0
 calico_policy_controller_image: rivernet/kube-policy-controller:v0.7.0
 flannel_image: rivernet/flannel:v0.7.1-amd64
 ############################################################################
+# Required softwares to be installed on all hosts
+required_softwares:
+  - rsync
+############################################################################
 # Configuration for ECP
 # Docker registry
 registry_domain: docker.io
@@ -102,7 +106,6 @@ app_images:
   - docker.io/rivernet/redis_exporter:v0.14
   - docker.io/rivernet/curl:ubuntu-precise
   - docker.io/rivernet/tomcat:8.0.47-r0
-
 #############################################################################
 service_subnet: 10.96.0
 service_cidr: "{{ service_subnet }}.0/12"
